add: inventory page

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Silo IN4Y",
-  "name": "Silo IN4Y",
+  "short_name": "Silos4Y",
+  "name": "Silos4Y",
   "icons": [
     {
       "src": "favicon.ico",
